[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "python-common-lib"
version = "1.0.3"
description = ""
authors = ["Szilard Nemeth <szilard.nemeth88@gmail.com>"]
readme = "README.md"
packages = [{include = "pythoncommons"}]

[tool.poetry.dependencies]
python = "^3.8"
gspread = "^5.5.0"
humanize = "^4.4.0"
bs4 = "^0.0.1"
requests = "^2.28.1"
GitPython = "^3.1.27"
tabulate = "^0.8.10"
docker = "^6.0.0"
sh = ">=1.14.1,<1.15.0"
Colr = "^0.9.1"
jira = "^3.4.1"
pytest = ">=6.2.3,<6.3.0"
dataclasses-json = "^0.5.7"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pytest = ">=6.2.3,<6.3.0"
pytest-cov = "^3.0.0"
pre-commit = "^2.20.0"
dataclasses-json = "^0.5.7"
black = "*"
autopep8 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
